Update references and docs

--- a/SyncBox-Docs/mkdocs.yml
+++ b/SyncBox-Docs/mkdocs.yml
@@ -13,7 +13,7 @@ nav:
             - timeseriesCrossCorrelation.m: ref/timeseriesCrossCorrelation.md
             - timeseriesPLV.m: ref/timeseriesPLV.md
             - timeseriesCoherence.m: ref/timeseriesCoherence.md
-            - timeseriesShannonEntropy.m: ref/timeseriesShannonEntropy.md
+            - timeseriesNSE.m: ref/timeseriesNSE.md
             - timeseriesLambda.m: ref/timeseriesLambda.md
             - timeseriesMI_kernel.m: ref/timeseriesMI_kernel.md
             - timeseriesTE_rank.m: ref/timeseriesTE_rank.md
