--- a/SyncBox-Docs/mkdocs.yml
+++ b/SyncBox-Docs/mkdocs.yml
@@ -14,7 +14,7 @@ nav:
             - timeseriesPLV.m: ref/timeseriesPLV.md
             - timeseriesCoherence.m: ref/timeseriesCoherence.md
             - timeseriesNSE.m: ref/timeseriesNSE.md
-            - timeseriesLambda.m: ref/timeseriesLambda.md
+            - timeseriesCPI.m: ref/timeseriesCPI.md
             - timeseriesMI_kernel.m: ref/timeseriesMI_kernel.md
             - timeseriesTE_rank.m: ref/timeseriesTE_rank.md
             - timeseriesPhaseTE.m: ref/timeseriesPhaseTE.md
